# piano-midi

./: main.py  music-ai-test.m4a  radiohead.m4a  railpack-info.json  railpack-plan.json  readme.md  requirements.txt
backend/: .env.example  .gitignore  README.MD  docker-compose.yml  dockerfile  main.py  models.py  pyproject.toml  railpack-info.json  railpack-plan.json  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/routes/: separation.py  workflows.py
backend/app/schemas/: __init__.py  responses.py
backend/app/services/: midi_service.py  musicai_service.py
backend/app/utils/: file_utils.py  logger.py
backend/instance/: music_app.db
backend/utils/: youtube.py
web/: package-lock.json  package.json  pnpm-lock.yaml
web/app/: layout.tsx  page.tsx
web/app/context/: auth-context.tsx
web/app/login/: page.tsx
web/components/: auth-modal.tsx  midi-device-panel.tsx  midi-dropzone.tsx  midi-player.tsx  midi-uploader.tsx  mode-selector.tsx  piano-roll-canvas.tsx  piano-roll.tsx  playback-controls.tsx  score-panel.tsx  unified-piano-canvas.tsx  virtual-piano.tsx  youtube-modal.tsx
web/hooks/: use-keyboard-input.ts  use-midi-input.ts
web/lib/: audio-engine.ts  keyboard-mapping.ts  midi-parser.ts  midi-utils.ts
